fix button wrap

--- a/src/components/styled/button.css
+++ b/src/components/styled/button.css
@@ -207,9 +207,7 @@
   }
 }
 /* group */
-.btn-group {
-  @apply flex-nowrap;
-  
+.btn-group {  
   & > input[type="radio"]:checked.btn,
   & > .btn-active {
     @apply border-primary bg-primary text-primary-content;
